--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,19 @@
   width: 100%;
   height: 30rem;
 }
+
+.inputWrap {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+.search-input {
+  width: 30vw;
+  padding: 7px;
+  font-size: 16px;
+  outline-style: none;
+  border-radius: 10px;
+}
