--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,19 @@
   outline-style: none;
   border-radius: 10px;
 }
+
+.filter-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 16px;
+}
